--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -14,20 +14,23 @@ spec:
   ---
   
   apiVersion: apps/v1
-  kind: Deploymnet
-  metadata:
-    name: train-schedule-deploymnet
-    labels:
+kind: Deployment
+metadata:
+  name: train-schedule-deployment
+  labels:
+    app: train-schedule
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
       app: train-schedule
-  spec:
-    replicas: 2
-    selector:
-      matchLabels:
+  template:
+    metadata:
+      labels:
         app: train-schedule
-      spec:
-        containers:
-        - name: train-schedule
+    spec:
+      containers:
+      - name: train-schedule
         image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
         ports:
         - containerPort: 8080
-        
